--- a/paper1/issues.tex
+++ b/paper1/issues.tex
@@ -1,19 +1,5 @@
 \section{Issues}
 
+\DONE{Perfect Writing!}
 
 
-\subsection{Writing Errors}
-
-    \TODO{Spelling errors}
-
-
-
-\subsection{Structural Issues}
-
-    \TODO{Acknowledgement section missing}
-
-
-\subsection{Details about the Figures and Tables}
-
-    \TODO{Capitalization errors in referring to captions, e.g. Figure 1, Table 2}
- 
